--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,4 @@
-* {
+body {
   font-family: Verdana;
   background-color: Black;
   text-align: center;
@@ -19,12 +19,17 @@ h2 {
   font-weight: 300;
 }
 
-a {
+.link {
   color: aquamarine;
   font-size: 16px;
 }
 
-p {
+.desc {
   font-size: 21px;
+  color: gray;
+}
+
+.footer {
+  text-align: right;
   color: gray;
 }
